Add new codes